--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ a {
 h1, h2, h3, h4, h5, h6, p {
         margin: 0;
 }
+img {
+        display: block;
+}
 /* header */
 .container {
         max-width: 1158px;
@@ -23,7 +26,7 @@ h1, h2, h3, h4, h5, h6, p {
         margin: 0 auto;
 }
 .header {
-        border-bottom: #e7e9fc;
+        border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
         display: flex;
@@ -93,13 +96,12 @@ color: #F4F4FD;
 color: #404bbf;
 }
 
-/* main */
+/* main section */
 .main-container {
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 600px;
         gap: 48px;
 }
 .section-heading {
@@ -112,6 +114,7 @@ color: #404bbf;
 }
 .main-page {
         background: #2E2F42;
+padding: 188px 0;
 }
 .heading {
         font-weight: 700;
@@ -121,6 +124,7 @@ color: #404bbf;
         text-align: center;
         color: white;
         margin: 0 auto;
+        max-width: 496px;
 }
 .btn {
             font-weight: 500;
@@ -131,14 +135,25 @@ color: #404bbf;
             background-color: #4D5AE5;
             cursor: pointer;
         border-radius: 4px;
-                width: 169px;
                 height: 56px;
                 text-align: center;
                 margin: 0;
+                min-width: 169px;
+                border: none;
 }
 .btn:hover,
 .btn:focus {
 background-color: #404BBF;
+}
+
+/* strategy */
+.strategy-section {
+        padding: 120px 0;
+}
+.strategy-list {
+        display: flex;
+        gap: 24px;
+
 }
 .strategy-list-items {
         font-weight: 500;
@@ -146,6 +161,7 @@ background-color: #404BBF;
         line-height: 1.2;
         letter-spacing: 0.02em;
         color: #2e2f42;
+        margin-bottom: 8px;
 }
 .strategy-list-text {
                 line-height: 1.5;
