--- a/css/styles.css
+++ b/css/styles.css
@@ -162,14 +162,27 @@ background-color: #404BBF;
         letter-spacing: 0.02em;
         color: #2e2f42;
         margin-bottom: 8px;
+
+}
+.team-box {
+        padding: 32px 0;
 }
 .strategy-list-text {
                 line-height: 1.5;
                 letter-spacing: 0.02em;
                 color: #434455;
 }
+/* team section */
+.team-list {
+        display: flex;
+        gap: 24px;
+}
+.section-heading-team {
+margin-bottom: 72px;
+}
 .team-section {
         background-color: #F4F4FD;
+        padding: 120px 0;
 }
 .team-names {
         font-weight: 500;
@@ -178,15 +191,20 @@ background-color: #404BBF;
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        margin-bottom: 8px;
+        text-align: center;
 }
 .team-text {
         line-height: 1.5;
         letter-spacing: 0.02em;
         text-align: center;
         color: #434455;
+        text-align: center;
 }
 .team-list-items {
 background-color: #FFFFFF;
+width: calc((100% - 72px) / 4);
+border-radius: 0px 0px 4px 4px;
 }
 .portfolio-list-heading {
                 font-weight: 500;
