--- a/css/styles.css
+++ b/css/styles.css
@@ -205,6 +205,25 @@ margin-bottom: 72px;
 background-color: #FFFFFF;
 width: calc((100% - 72px) / 4);
 border-radius: 0px 0px 4px 4px;
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+/* portfolio */
+.portfolio {
+        padding: 120px 0;
+}
+.section-heading-portfolio {
+        margin-bottom: 72px;
+}
+.portfolio-list {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 48px;
+}
+.portfolio-box {
+        padding: 32px 16px;
+        border: 1px solid #e7e9fc;
+        border-top: none;
 }
 .portfolio-list-heading {
                 font-weight: 500;
@@ -212,7 +231,9 @@ border-radius: 0px 0px 4px 4px;
                 line-height: 1.2;
                 letter-spacing: 0.02em;
                 color: #2e2f42;
+                margin-bottom: 8px;
 }
+
 .portfolio-list-text {
                 line-height: 1.5;
                 letter-spacing: 0.02em;
@@ -220,9 +241,15 @@ border-radius: 0px 0px 4px 4px;
 }
 .footer {
         background-color: #2e2f42;
+        padding: 100px 0;
 }
 .footer-text {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #F4F4FD;
+        max-width: 264px;
+}
+.logo-footer {
+display: inline-block;
+margin-bottom: 16px;
 }
