--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,18 @@ img {
 .address-list {
         display: flex;
         align-items: center; 
-        gap: 149px;
+        gap: 40px;
+}
+.visually-hidden {
+        position: absolute;
+                width: 1px;
+                height: 1px;
+                margin: -1px;
+                padding: 0;
+                border: 0;
+                clip: rect(0 0 0 0);
+                overflow: hidden;
+                white-space: nowrap;
 }
 .header-logo {
         padding: 24px 0;
@@ -154,6 +165,9 @@ background-color: #404BBF;
         display: flex;
         gap: 24px;
 
+}
+.strategy-block {
+        width: calc((100% - 72px) / 4);
 }
 .strategy-list-items {
         font-weight: 500;
