--- a/css/styles.css
+++ b/css/styles.css
@@ -46,16 +46,17 @@ img {
         align-items: center; 
         gap: 40px;
 }
-.visually-hidden {
-        position: absolute;
-                width: 1px;
-                height: 1px;
-                margin: -1px;
-                padding: 0;
-                border: 0;
-                clip: rect(0 0 0 0);
-                overflow: hidden;
-                white-space: nowrap;
+        .visually-hidden {
+                        position: absolute;
+                        width: 1px;
+                        height: 1px;
+                        margin: -1px;
+                        border: 0;
+                        padding: 0;
+                        white-space: nowrap;
+                        clip-path: inset(100%);
+                        clip: rect(0 0 0 0);
+                        overflow: hidden;
 }
 .header-logo {
         padding: 24px 0;
